--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-h5py==2.9.0
 Flask==1.1.2
-numpy==1.18.5
+h5py==2.9.0
+Keras==2.1.2
+matplotlib==3.2.0
+numpy==1.19.4
 opencv-python==4.4.0.46
-Pillow==7.1.2
-scikit-learn==0.23.2
-tensorflow==2.1.2
-tqdm==4.53.0
+Pillow==6.2.2
+scikit-learn==0.24.0
+tensorflow==1.13.2
+tqdm==4.55.0
